--- a/integrations/dalle/package.json
+++ b/integrations/dalle/package.json
@@ -2,19 +2,11 @@
   "name": "@botpresshub/dalle",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
+    "check:bplint": "bp lint",
     "version": "bp --version",
-    "login": "bp login",
-    "build": "bp build",
-    "dev": "bp dev",
-    "gen": "bp gen",
-    "deploy": "bp deploy",
-    "add:interfaces": "pnpm bp add -y"
+    "build": "bp add -y && bp build"
   },
-  "keywords": [],
   "private": true,
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
