--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -2,10 +2,7 @@
   "name": "@botpresshub/googledrive",
   "scripts": {
     "check:type": "tsc --noEmit",
-    "login": "bp login",
-    "deploy": "bp deploy",
-    "build": "bp build",
-    "add:interfaces": "pnpm bp add -y"
+    "build": "bp add -y && bp build"
   },
   "private": true,
   "dependencies": {
