--- a/integrations/zapier/package.json
+++ b/integrations/zapier/package.json
@@ -3,18 +3,11 @@
   "description": "Zapier integration for Botpress",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
-    "build": "pnpm bp build",
-    "login": "pnpm bp login",
-    "deploy": "pnpm bp deploy",
+    "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "test": "jest",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "bp lint",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
