--- a/bots/knowledgiani/package.json
+++ b/bots/knowledgiani/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "postinstall": "genenv -o ./.genenv/index.ts -e KNOWLEDGIANI_TELEGRAM_BOT_TOKEN",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "build": "bp build",
-    "add:integrations": "pnpm bp add -y"
+    "check:bplint": "bp lint",
+    "build": "bp add -y && bp build"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
@@ -24,7 +23,11 @@
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpresshub/telegram": "workspace:*",
+    "@botpresshub/openai": "workspace:*",
+    "@botpresshub/personality": "workspace:*",
+    "@botpresshub/knowledge": "workspace:*"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
