--- a/integrations/cerebras/package.json
+++ b/integrations/cerebras/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@botpresshub/cerebras",
   "scripts": {
-    "start": "pnpm bp serve",
-    "build": "pnpm bp build",
-    "deploy": "pnpm bp deploy",
+    "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "bp lint"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +15,8 @@
   "devDependencies": {
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpresshub/llm": "workspace:*"
   },
   "bpDependencies": {
     "llm": "../../interfaces/llm"
