--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -5,14 +5,10 @@
   "private": true,
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "build": "pnpm bp build",
-    "add:interfaces": "pnpm bp add -y",
+    "check:bplint": "bp lint",
+    "build": "bp add -y && bp build",
     "eslint": "eslint ./ --ext .ts --ext .tsx --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
@@ -27,7 +23,8 @@
     "@sentry/cli": "^2.18.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpresshub/hitl": "workspace:*"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
