--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -2,16 +2,10 @@
   "name": "@botpresshub/googlecalendar",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
-    "build": "pnpm bp build",
-    "deploy": "pnpm bp deploy",
+    "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "bp lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
@@ -24,7 +18,12 @@
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.19.10",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpresshub/creatable": "workspace:*",
+    "@botpresshub/deletable": "workspace:*",
+    "@botpresshub/listable": "workspace:*",
+    "@botpresshub/readable": "workspace:*",
+    "@botpresshub/updatable": "workspace:*"
   },
   "bpDependencies": {
     "creatable": "../../interfaces/creatable",
