--- a/integrations/linear/package.json
+++ b/integrations/linear/package.json
@@ -2,16 +2,10 @@
   "name": "@botpresshub/linear",
   "private": true,
   "scripts": {
-    "start": "pnpm bp serve",
-    "build": "pnpm bp build",
-    "login": "pnpm bp login",
+    "build": "bp add -y && bp build",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "pnpm bp add -y"
+    "check:bplint": "bp lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
@@ -25,7 +19,8 @@
     "@botpress/cli": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.11.17",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpresshub/listable": "workspace:*"
   },
   "bpDependencies": {
     "listable": "../../interfaces/listable"
