--- a/integrations/telegram/package.json
+++ b/integrations/telegram/package.json
@@ -17,14 +17,12 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
+    "@botpress/common": "workspace:*",
+    "@botpresshub/typing-indicator": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*",
-    "@botpresshub/typing-indicator": "workspace:*"
+    "nodemon": "^2.0.20"
   },
   "bpDependencies": {
     "typing-indicator": "../../interfaces/typing-indicator"
