--- a/integrations/zendesk/package.json
+++ b/integrations/zendesk/package.json
@@ -16,12 +16,10 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@sentry/cli": "^2.18.1",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.17",
-    "ts-node": "^10.9.1",
     "@botpress/common": "workspace:*",
-    "@botpresshub/hitl": "workspace:*"
+    "@botpresshub/hitl": "workspace:*",
+    "@sentry/cli": "^2.18.1",
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
