--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check",
+    "check:sherif": "sherif",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
     "check:lint": "pnpm check:bplint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
+    "fix:sherif": "sherif --fix",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
     "check": "pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
     "fix": "pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
   },
-  "dependencies": {
+  "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/sdk": "workspace:^",
     "@bpinternal/depsynky": "^0.0.1",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
@@ -32,7 +34,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.1",
     "retry-cli": "^0.7.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
+    "sherif": "1.0.1",
     "turbo": "^2.3.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
