--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -12,12 +12,11 @@
     "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@bpinternal/genenv": "0.0.1",
-    "@types/node": "^18.11.17",
-    "execa": "^8.0.1",
     "@botpress/common": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
-    "@botpresshub/zendesk": "workspace:*"
+    "@botpresshub/zendesk": "workspace:*",
+    "@bpinternal/genenv": "0.0.1",
+    "execa": "^8.0.1"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
