--- a/integrations/clickup/package.json
+++ b/integrations/clickup/package.json
@@ -15,9 +15,6 @@
   },
   "devDependencies": {
     "@botpress/common": "workspace:*",
-    "@types/node": "^18.11.17",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "nodemon": "^3.1.7"
   }
 }
