--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -20,11 +20,9 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
+    "@botpresshub/hitl": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.17",
-    "typescript": "^4.9.5",
-    "@botpresshub/hitl": "workspace:*"
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
