--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -18,24 +18,21 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@react-email/components": "0.0.25",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
     "gmail-api-parse-message": "^2.1.2",
     "googleapis": "^112.0.0",
     "js-base64": "^3.7.5",
     "node-html-parser": "^6",
     "nodemailer": "^6.7.2",
-    "query-string": "^6.14.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "query-string": "^6.14.1"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.19.10",
     "@types/nodemailer": "^6.4.4",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1"
   }
 }
