--- a/integrations/gsheets/package.json
+++ b/integrations/gsheets/package.json
@@ -15,9 +15,6 @@
   },
   "devDependencies": {
     "@botpress/common": "workspace:*",
-    "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.19.10",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@sentry/cli": "^2.18.1"
   }
 }
