--- a/integrations/instagram/package.json
+++ b/integrations/instagram/package.json
@@ -16,11 +16,9 @@
     "query-string": "^6.14.1"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "nodemon": "^2.0.20"
   }
 }
