--- a/integrations/intercom/package.json
+++ b/integrations/intercom/package.json
@@ -15,11 +15,9 @@
     "intercom-client": "^4.0.0"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "nodemon": "^2.0.20"
   }
 }
