--- a/integrations/mailchimp/package.json
+++ b/integrations/mailchimp/package.json
@@ -12,9 +12,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80"
   },
   "devDependencies": {
-    "@types/mailchimp__mailchimp_marketing": "3.0.10",
-    "@types/node": "^18.11.17",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@types/mailchimp__mailchimp_marketing": "3.0.10"
   }
 }
