--- a/integrations/messenger/package.json
+++ b/integrations/messenger/package.json
@@ -15,16 +15,14 @@
     "@slack/web-api": "^6.8.0",
     "axios": "^1.6.2",
     "messaging-api-messenger": "^1.1.0",
-    "query-string": "^6.14.1",
     "preact": "^10.23.1",
-    "preact-render-to-string": "^6.5.7"
+    "preact-render-to-string": "^6.5.7",
+    "query-string": "^6.14.1"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "nodemon": "^2.0.20"
   }
 }
