--- a/integrations/notion/package.json
+++ b/integrations/notion/package.json
@@ -13,10 +13,8 @@
     "@notionhq/client": "^2.2.7"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@tsconfig/node18-strictest": "^1.0.0",
-    "@types/node": "^18.11.17",
-    "ts-node": "^10.9.1",
-    "vitest": "^0.33.0",
-    "@botpress/common": "workspace:*"
+    "vitest": "^0.33.0"
   }
 }
