--- a/integrations/webhook/package.json
+++ b/integrations/webhook/package.json
@@ -16,12 +16,10 @@
     "qs": "^6.11.0"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
     "@types/qs": "^6.9.7",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "nodemon": "^2.0.20"
   }
 }
