--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -20,11 +20,9 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.13.0",
     "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "nodemon": "^2.0.20"
   }
 }
