--- a/integrations/zapier/package.json
+++ b/integrations/zapier/package.json
@@ -17,15 +17,13 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
     "esbuild": "^0.15.18",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "@botpress/common": "workspace:*"
+    "ts-jest": "^29.1.0"
   }
 }
