--- a/interfaces/llm/package.json
+++ b/interfaces/llm/package.json
@@ -8,12 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@botpress/sdk": "workspace:*",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*",
-    "@types/node": "^18.11.17",
-    "typescript": "^4.9.4"
+    "@botpress/cli": "workspace:*"
   }
 }
