--- a/interfaces/updatable/package.json
+++ b/interfaces/updatable/package.json
@@ -11,7 +11,6 @@
     "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*",
-    "typescript": "^4.9.4"
+    "@botpress/cli": "workspace:*"
   }
 }
