--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,8 +10,5 @@
     "@botpress/sdk": "workspace:*",
     "openai": "^4.53.0"
   },
-  "devDependencies": {
-    "@types/node": "^18.11.17",
-    "typescript": "^4.9.4"
-  }
+  "devDependencies": {}
 }
