--- a/integrations/teams/package.json
+++ b/integrations/teams/package.json
@@ -20,8 +20,6 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/jsonwebtoken": "^9.0.3",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20"
+    "@types/jsonwebtoken": "^9.0.3"
   }
 }
