--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,7 +35,6 @@
     "@types/qs": "^6.9.7",
     "esbuild": "^0.16.12",
     "lodash": "^4.17.21",
-    "tsup": "^8.0.2",
-    "vitest": "^0.33.0"
+    "tsup": "^8.0.2"
   }
 }
