--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -18,20 +18,18 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@react-email/components": "0.0.25",
-    "react-dom": "^18.3.1",
-    "react": "^18.3.1",
     "gmail-api-parse-message": "^2.1.2",
     "googleapis": "^112.0.0",
     "js-base64": "^3.7.5",
     "node-html-parser": "^6",
     "nodemailer": "^6.7.2",
-    "query-string": "^6.14.1"
+    "query-string": "^6.14.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
     "@types/nodemailer": "^6.4.4",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1"
   }
