--- a/integrations/telegram/package.json
+++ b/integrations/telegram/package.json
@@ -11,7 +11,6 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
-    "@sentry/node": "7.53.1",
     "lodash": "^4.17.21",
     "telegraf": "^4.16.3"
   },
@@ -20,9 +19,7 @@
     "@botpress/common": "workspace:*",
     "@botpresshub/typing-indicator": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/lodash": "^4.14.191",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20"
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "typing-indicator": "../../interfaces/typing-indicator"
