--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
-    "@botpresshub/creatable": "workspace:*",
-    "nodemon": "^3.1.4"
+    "@botpresshub/creatable": "workspace:*"
   },
   "bpDependencies": {
     "creatable": "../../interfaces/creatable"
