--- a/integrations/webhook/package.json
+++ b/integrations/webhook/package.json
@@ -18,8 +18,6 @@
   "devDependencies": {
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.18.1",
-    "@types/qs": "^6.9.7",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20"
+    "@types/qs": "^6.9.7"
   }
 }
