--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check",
-    "check:sherif": "sherif",
+    "check:sherif": "sherif --ignore-dependency axios --ignore-dependency query-string --ignore-dependency googleapis",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
     "check:lint": "pnpm check:bplint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
-    "fix:sherif": "sherif --fix",
+    "fix:sherif": "sherif --ignore-dependency axios --ignore-dependency query-string --ignore-dependency googleapis --fix",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
     "check": "pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
