--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -16,9 +16,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup
         uses: ./.github/actions/setup
+      - run: pnpm run check:dep
+      - run: pnpm run check:sherif
       - run: pnpm run check:format
       - run: pnpm run check:eslint
       - run: pnpm run check:bplint
       - run: pnpm run check:type
-      - run: pnpm run check:dep
       - run: pnpm run test
