--- a/bots/sheetzy/package.json
+++ b/bots/sheetzy/package.json
@@ -15,8 +15,7 @@
     "@botpress/common": "workspace:*",
     "@botpresshub/gsheets": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
-    "@bpinternal/genenv": "0.0.1",
-    "execa": "^8.0.1"
+    "@bpinternal/genenv": "0.0.1"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
