--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -19,8 +19,7 @@
     "@botpresshub/linear": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
     "@bpinternal/genenv": "0.0.1",
-    "@types/lodash": "^4.14.191",
-    "execa": "^8.0.1"
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
