--- a/plugins/personality/package.json
+++ b/plugins/personality/package.json
@@ -16,8 +16,7 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpresshub/llm": "workspace:*",
-    "@bpinternal/genenv": "0.0.1",
-    "execa": "^8.0.1"
+    "@bpinternal/genenv": "0.0.1"
   },
   "bpDependencies": {
     "llm": "../../interfaces/llm"
