--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "fix:sherif": "sherif --ignore-dependency axios --ignore-dependency query-string --ignore-dependency googleapis --fix",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "check": "pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
-    "fix": "pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
+    "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
+    "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
