--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -16,17 +16,12 @@
   },
   "devDependencies": {
     "@botpress/common": "workspace:*",
-    "@bpinternal/genenv": "0.0.1",
-    "@types/json-schema": "^7.0.11",
-    "@types/node": "^18.11.17",
-    "@types/qs": "^6.9.7",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "@botpresshub/logger": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
     "@botpresshub/webhook": "workspace:*",
-    "@botpresshub/logger": "workspace:*"
+    "@bpinternal/genenv": "0.0.1",
+    "@types/json-schema": "^7.0.12",
+    "@types/qs": "^6.9.7"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
