--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -15,13 +15,11 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@bpinternal/genenv": "0.0.1",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.17",
-    "execa": "^8.0.1",
     "@botpress/common": "workspace:*",
+    "@botpresshub/linear": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
-    "@botpresshub/linear": "workspace:*"
+    "@bpinternal/genenv": "0.0.1",
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
