--- a/integrations/clickup/package.json
+++ b/integrations/clickup/package.json
@@ -10,14 +10,9 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "axios": "^1.7.7",
-    "zod": "^3.23.8"
+    "axios": "^1.7.7"
   },
   "devDependencies": {
-    "@botpress/common": "workspace:*",
-    "@types/node": "^18.11.17",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@botpress/common": "workspace:*"
   }
 }
