--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -14,17 +14,14 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "axios": "^1.4.0",
-    "lodash": "^4.17.21",
-    "zod": "^3.20.6"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
-    "@sentry/cli": "^2.18.1",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.17",
-    "typescript": "^4.9.5",
-    "@botpresshub/hitl": "workspace:*"
+    "@botpresshub/hitl": "workspace:*",
+    "@sentry/cli": "^2.39.1",
+    "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "hitl": "../../interfaces/hitl"
