--- a/integrations/github/package.json
+++ b/integrations/github/package.json
@@ -18,8 +18,6 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/client": "workspace:*",
-    "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.19.10",
-    "typescript": "^4.9.4"
+    "@sentry/cli": "^2.39.1"
   }
 }
