--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -18,8 +18,6 @@
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@react-email/components": "0.0.25",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
     "gmail-api-parse-message": "^2.1.2",
     "googleapis": "^112.0.0",
     "js-base64": "^3.7.5",
@@ -30,12 +28,9 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.19.10",
+    "@sentry/cli": "^2.39.1",
     "@types/nodemailer": "^6.4.4",
-    "esbuild": "^0.15.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1"
   }
 }
