--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -18,10 +18,7 @@
     "@bpinternal/zui": "0.12.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "esbuild": "^0.16.10",
-    "ts-node": "^10.9.1",
-    "tsup": "^8.0.2",
-    "typescript": "^4.9.4"
+    "esbuild": "^0.16.12",
+    "tsup": "^8.0.2"
   }
 }
