--- a/plugins/logger/package.json
+++ b/plugins/logger/package.json
@@ -12,9 +12,7 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@bpinternal/genenv": "0.0.1",
-    "@types/node": "^18.11.17",
-    "execa": "^8.0.1",
-    "@botpress/common": "workspace:*"
+    "@botpress/common": "workspace:*",
+    "@bpinternal/genenv": "0.0.1"
   }
 }
