--- a/.github/workflows/run-cli-tests.yml
+++ b/.github/workflows/run-cli-tests.yml
@@ -20,6 +20,8 @@ jobs:
         uses: ./.github/actions/setup
         with:
           filter: '@botpress/cli'
+          turbo_team: ${{ secrets.TURBO_TEAM }}
+          turbo_token: ${{ secrets.TURBO_TOKEN }}
       - run: |
           pnpm run -F cli test:e2e -v \
             --api-url https://api.botpress.dev \
