--- a/integrations/intercom/package.json
+++ b/integrations/intercom/package.json
@@ -12,6 +12,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "axios": "^1.7.8",
     "intercom-client": "^4.0.0"
   },
   "devDependencies": {
