--- a/interfaces/proactive-user/package.json
+++ b/interfaces/proactive-user/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "@botpresshub/hitl",
-  "description": "HITL interface for Botpress",
+  "name": "@botpresshub/proactive-user",
+  "description": "interface that allows the bot to proactively create a user in the integration",
   "private": true,
   "scripts": {
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint"
   },
-  "license": "MIT",
   "dependencies": {
     "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*",
-    "@botpresshub/proactive-user": "workspace:*"
+    "@botpress/cli": "workspace:*"
   }
 }
