feat: move chat integration from echo to botpress (#13491)

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "bump": "depsynky bump && pnpm -w install",
     "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
-    "check:dep": "depsynky check",
-    "check:sherif": "sherif --ignore-dependency axios --ignore-dependency query-string --ignore-dependency googleapis",
+    "check:dep": "depsynky check --ignore-dev",
+    "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
     "check:lint": "pnpm check:bplint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
-    "fix:sherif": "sherif --ignore-dependency axios --ignore-dependency query-string --ignore-dependency googleapis --fix",
+    "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis --fix",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
     "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@botpress/sdk": "workspace:^",
-    "@bpinternal/depsynky": "^0.0.1",
+    "@botpress/sdk": "workspace:*",
+    "@bpinternal/depsynky": "^0.0.2",
     "@types/node": "^18.19.67",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
