--- a/turbo.json
+++ b/turbo.json
@@ -7,11 +7,11 @@
     },
     "@botpress/client#build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["@botpress/client#generate"]
+      "dependsOn": ["generate"]
     },
     "@botpress/chat#build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["@botpress/chat#generate"]
+      "dependsOn": ["generate"]
     },
     "@botpress/sdk#build": {
       "outputs": ["dist/**"],
@@ -23,7 +23,7 @@
     },
     "build": {
       "outputs": ["bp_modules/**", ".botpress/**"],
-      "dependsOn": ["@botpress/cli#build", "^build"]
+      "dependsOn": ["generate", "^build"]
     },
     "check:type": {},
     "check:bplint": {}
